# rig-chat-client

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
src/: main.rs
src/api/: connect.rs  mod.rs  prompt.rs  recording.rs
src/site/: index.rs
src/state/: prompt.rs
src/templates/: mod.rs
src/tools/: mod.rs
static/: index.css  main.css
static/css/: index.css
static/js/: index.js
templates/: chat_history.html  index.html  message.html  prompt.html  recording.html
templates/svgs/: microphone.html  send.html
