[package]
name = "rig-chat-client"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
actix-web-lab = "0.24.1"
askama = "0.12.1"
askama-markdown-cmark = "0.1.0"
askama_actix = "0.14.0"
base64 = "0.22.1"
dotenv = "0.15.0"
env_logger = "0.11.6"
futures = "0.3.31"
rig-core = { version = "0.11.0", features = ["image", "audio"]}
serde = "1.0.217"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"